// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all future items loaded regardless of other props 1`] = `
<div>
  <Container
    as="div"
    display={null}
    padding="x-large"
    textAlign="center"
  >
    <Typography
      as="span"
      letterSpacing="normal"
      size="medium"
    >
      All items loaded
    </Typography>
  </Container>
</div>
`;

exports[`renders load more by default 1`] = `
<div>
  <Container
    as="div"
    display={null}
    padding="x-large"
    textAlign="center"
  >
    <Button
      as="button"
      buttonRef={[Function]}
      fluidWidth={false}
      margin="0"
      onClick={[Function]}
      size="medium"
      type="button"
      variant="link"
    >
      load more
    </Button>
  </Container>
  <Waypoint
    bottomOffset="0px"
    fireOnRapidScroll={true}
    horizontal={false}
    onEnter={[Function]}
    onLeave={[Function]}
    onPositionChange={[Function]}
    topOffset="0px"
  />
</div>
`;

exports[`renders loading when indicated 1`] = `
<div>
  <Container
    as="div"
    display={null}
    padding="x-large"
    textAlign="center"
  >
    <Container
      display={null}
    >
      <Container
        display="inline"
      >
        <Spinner
          size="small"
          title="loading..."
          variant="default"
        />
      </Container>
      <Typography
        as="span"
        letterSpacing="normal"
        size="medium"
      >
        loading...
      </Typography>
    </Container>
  </Container>
</div>
`;
